--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Calculator4.0</title>
     <style>
         body{
+            /* margin-top: 50px; */
             background-color: #282828;
           }
         .t{
@@ -18,6 +19,7 @@
 
         }
         .b3{
+            border-radius: 15px;
             border: 3px solid #000000;
             height:65px;
             width: 65px;
@@ -29,13 +31,14 @@
         }
         #ta1{
             /* color:black; */
+            border-radius: 15px;
             border: 3px solid #000000;
             color: white;
             background-color: white;
             height:65px;
             margin-left: 602px;
             width: 271px;
-            margin-top: 100px;
+            margin-top: 159px;
             text-size-adjust: 40px;
         }
         #d{
@@ -97,6 +100,7 @@
             loop = 0;
             i = 0;
             console.log(n1);
+            document.getElementById('d').innerHTML = "0000";
             // console.log("Hai douzo yorushiku");
         };
         
